deploy/k3s/eovsvc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: eovwebsvc
spec:
  selector:
    app.kubernetes.io/name: eovweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
