deploy/k3s/eovistiogatewaytraffic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eovweb
spec:
  hosts:
  - "*"
  gateways:
  - eov-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: eovwebsvc
