deploy/k3s/eovtraefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: eovtraeingress

spec:
  defaultBackend:
    service:
      name: eovwebsvc
      port:
        number: 80
